change names of script files

--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
     <p>Clique z'y donc!</p>
 
 </body>
-<script src="./JS/Simulator.js"></script>
-<!-- <script src="./JS/Aquarium.js" rel="text/javascript"></script> -->
-<script src="./JS/AquariumMaker.js"></script>
+<script src="./JS/Aquarium.js"></script>
 <script src="./JS/Fish.js"></script>
+<script src="./JS/Simulator.js"></script>
 <script src="./JS/main.js"></script>
 
 </html>
